<resources>
    <string name="app_name">PlasticDiary</string>
    <string name="welcome_text">Welcome to \n Plastic Diary</string>
    <string name="save_the_planet_heading">Save the planet</string>
    <string name="save_the_planet_subtitle">Our aim is to encourage users into pro-environmental behaviour through visualizing the effects of plastic waste through statistics, videos and more.</string>
    <string name="learn_and_improve_heading">Learn and improve</string>
    <string name="learn_and_improve_subtitle">Educate yourself on best and sustainable practices on the use of plastics: which to reuse, how to reuse and how to dispose them off properly.</string>
    <string name="smart_recycling_heading">Smart recycling</string>
    <string name="smart_recycling_subtitle">You\'ll recycling points in the country on a map and the closest ones to you will be highlighted</string>
    <string name="intro_welcome_text">You just took the first of a collaborative effort to save the planet </string>
    <string name="push_notif_info">Choose the time at which to receive notifications of general tips or to make an entry of plastics used today.</string>
    <string name="how_it_works_1">Users will get points (5) for reading a news item, research paper, watching a video, taking a quiz or making an entry in “the diary”.
        The accumulated points will add up and show in the leaderboard which will be divided into weekly and all time. Top 2 users at the end of the week are verified on the app. </string>
    <string name="how_it_works_2"><b>Badges</b> <br> Users will earn badges when they reach a certain number of views for a content or activity.
        E.g. A user will earn a badge for watching 5 videos, 10, 20, 50, 10 etc. Same for news items, articles etc. Users will be able to share their badges to the internet.</br>
    </string>
    <string name="article_title">Environmental impacts of food waste: Learnings and challenges from a case study on UK.
        Learnings and challenges from a case study on UK.  Learnings and challenges from a case study on UK</string>
    <string name="article_subtitle">Here\'s how workers at SembWaste’s Materials Recovery Facility sort recyclable waste into. Solid waste management is a universal issue</string>
    <string name="article_notif">Take a look at the articles section for fresh insightful articles</string>
    <string name="renewable_energy">Renewable energy is useful energy that is collected from renewable resources, which are naturally replenished on a human</string>
    <string name="tips">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper semper est non suscipit. Duis aliquet, leo ut pretium laoreet, erat nisi volutpat leo,
        id vulputate lectus enim id dolor. Donec ultrices ornare nulla, in fringilla massa cursus id. Duis euismod suscipit justo sed tempor.
        Morbi ac nisl eget tortor lacinia imperdiet id vitae tortor. Integer vel fermentum tellus. Nullam eget pretium ante. Sed quis nisi ut nunc tincidunt pharetra.
        Nam blandit eros nisi, vel hendrerit nibh feugiat at. Phasellus in congue justo. Duis scelerisque est eu mauris aliquet, eu pulvinar tellus lobortis.
        Praesent vehicula hendrerit sodales. Vestibulum libero orci, pulvinar elementum libero ac, mattis facilisis eros.</string>
    <string name="close_to_you">See the most polluted areas, find recycling plants and landfills that are located around you. Tap on the map below</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usage_hint">A unit is a single piece of plastic. Eg. a single rubber bag, a polythene bag, a plastic straw, plastic bottle etc. Please enter the number of plastic units you used today</string>
    <string name="usage_hint_alt">Please enter the number of plastic units you used today</string>
    <string name="tip_hint">Share your tips for other users to learn</string>
    <string name="quiz_info">If you leave this page now, the quiz will automatically be ended and scored</string>

    <string name="question_1">Food is a hot commodity! If we produce food that doesn\’t get eaten, what else is wasted?</string>

    <string name="wrong_answer_tip">It\'s actually 30%. About a third of the food produced on the planet goes to waste.
        Waste happens in every link of our food supply chain—from the fruit that never makes it off the farm to the vegetables you forgot were in your fridge.
        TIP: There are lots of things we can do to shop, cook, and eat smarter!</string>

    <string name="google_maps_api_key">AIzaSyBs2YjswfAH5yF4UrBZfgTxyVCiLQDtSpc</string>
    <string name="congratulations">Congratulations you\'ve completed your quiz</string>
</resources>